# tuat-feed

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/workflows/: pypi-publish.yml  test.yml
docs/source/: conf.py  index.rst  modules.rst  tuat_feed.rst
tests/: test_fetch.py  test_post.py
tuat_feed/: __init__.py  fetch.py  post.py
