[tool.poetry]
name = "tuat-feed"
version = "0.2.5"
description = "Unofficial library for fetching the feed for TUAT"
authors = ["Shogo Takata <s231276x@st.go.tuat.ac.jp>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/pineapplehunter/tuat-feed"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^6.2.5"
ipython = ">=7.31.1,<9.0.0"
sphinx-autobuild = "^2021.3.14"
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
